<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.OrderDetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">


    <androidx.cardview.widget.CardView
        android:layout_width="250dp"
        android:layout_height="300dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/doneImg"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/check"></ImageView>

            <TextView
                android:id="@+id/paymentTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:textColor="#484848"
                android:layout_marginTop="12dp"
                android:text="@string/Payment_Completed"></TextView>
            <TextView
                android:id="@+id/paymentTitleDes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14dp"
                android:gravity="center"
                android:textColor="#484848"
                android:layout_margin="8dp"
                android:text="@string/Payment_Description"></TextView>

            <TextView
                android:id="@+id/paymentYourOrder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:textColor="#484848"
                android:layout_margin="12dp"
                android:text="@string/Payment_Your_Order_Number"></TextView>

            <TextView
                android:id="@+id/paymentYourOrderNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:textColor="#484848"
                android:text="11111888585"></TextView>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/smileImg"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/smile"></ImageView>

    <TextView
        android:id="@+id/paymentYourOrderSuccess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14dp"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:lineSpacingExtra="4dp"
        android:textColor="@color/redColor"
        android:text="@string/paymentYourOrderSuccess"></TextView>

    </LinearLayout>

    <TextView
        android:id="@+id/myorderTV"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:textSize="14dp"
        android:textAllCaps="true"
        android:text="@string/myorderTV"
        android:textColor="@color/colorWhite"
        android:gravity="center"
        android:layout_margin="12dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/verify_radius_button_orange"></TextView>

</RelativeLayout>