<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="6dp"
    android:paddingLeft="12dp"
    android:paddingRight="12dp">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/featuredTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#2d2d2d"
            android:textSize="18dp"
            android:text="@string/DashBoard_featured"></TextView>

        <TextView
            android:id="@+id/viewAllTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/redColor"
            android:textSize="12dp"
            android:layout_marginTop="4dp"
            android:layout_alignParentRight="true"
            android:text="@string/DashBoard_viewAll"></TextView>

        <TextView
            android:id="@+id/restaurantDescriptionTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorGray"
            android:textSize="12dp"
            android:layout_marginTop="2dp"
            android:layout_below="@+id/featuredTV"
            android:text="@string/Consistency_and_quality"></TextView>

</RelativeLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/featuredRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"></androidx.recyclerview.widget.RecyclerView>

</LinearLayout>