<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="12dp"
    android:paddingLeft="12dp"
    android:paddingRight="12dp"
    android:background="@color/colorWhite">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp">

        <TextView
            android:id="@+id/restaurantFamousTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#2d2d2d"
            android:textSize="18dp"
            android:text="@string/DashBoard_restaurantFamous"></TextView>

        <TextView
            android:id="@+id/viewAllTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorGray"
            android:textSize="12dp"
            android:visibility="gone"
            android:layout_alignParentRight="true"
            android:text="@string/DashBoard_viewAll"></TextView>

        <TextView
            android:id="@+id/restaurantDescriptionTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorGray"
            android:textSize="12dp"
            android:layout_marginTop="2dp"
            android:layout_below="@+id/restaurantFamousTV"
            android:text="@string/Create_list"></TextView>
    </RelativeLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/famousRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"></androidx.recyclerview.widget.RecyclerView>

</LinearLayout>