<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroud_1"

    android:orientation="vertical"

    tools:context=".Activity.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="8dp"
        android:background="#D3000000">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.35"
        android:gravity="bottom"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginBottom="8dp"

            android:gravity="center">

            <ImageView
                android:layout_width="108dp"
                android:layout_height="96dp"
                android:src="@drawable/logo_lie"
                android:padding="8dp">

            </ImageView>

        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.65"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:padding="12dp"
            android:orientation="vertical"

            android:gravity="center">

            <TextView
                android:id="@+id/welcomeTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:text="@string/forget_text"
                android:textColor="@color/colorWhite"
                android:textSize="18dp"></TextView>



            <TextView
                android:id="@+id/newUserButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12dp"
                android:textColor="@color/colorWhite"
                android:lineSpacingExtra="4dp"
                android:layout_marginTop="6dp"
                android:layout_marginLeft="2dp"
                android:text="@string/forget_text_description"></TextView>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:layout_marginTop="12dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/emailImage"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/email"></ImageView>

                <EditText
                    android:id="@+id/enterEmail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#00000000"
                    android:layout_marginLeft="12dp"
                    android:layout_weight="1"
                    android:textColorHint="@color/colorWhite"
                    android:textSize="14dp"
                    android:textColor="@color/colorWhite"
                    android:hint="@string/register_email"></EditText>



            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.25dp"
                android:background="@color/colorWhite"></View>


            <TextView
                android:id="@+id/submit"
                android:layout_width="125dp"
                android:layout_height="48dp"
                android:textSize="14dp"
                android:gravity="center"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="6dp"
                android:text="@string/ForgetPasswordActivity_Submit"
                android:textColor="@color/colorWhite"
                android:background="@drawable/login_radius_button_orange"></TextView>
        </LinearLayout>




    </LinearLayout>

    </LinearLayout>

</LinearLayout>